--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
            
 
 <h1 style='font-size:20px;font-family:"Georgia",serif;color:#262626;background:lightblue;max-width:160px;' >Contact Details</h1>
-<a style='font-size:18px;font-family:"Georgia",serif;color:green;' href="~/Educational.html"> Click here to check my Contact Details</a>
+<a style='font-size:18px;font-family:"Georgia",serif;color:green;' href="Contact.html"> Click here to check my Contact Details</a>
 <br>
 <h1 style='font-size:20px;font-family:"Georgia",serif;color:#262626;background:lightblue;max-width:300px;' >Educational Qualifications</h1>
-<a style='font-size:18px;font-family:"Georgia",serif;color:green;' href="~/Educational.html"> Click here to check my educational qualification</a>
+<a style='font-size:18px;font-family:"Georgia",serif;color:green;' href="Education.html"> Click here to check my educational qualification</a>
 <br>
 <h1 style='font-size:20px;font-family:"Georgia",serif;color:#262626;background:lightblue;max-width:170px;' > Qualifications</h1>
-<a style='font-size:18px;font-family:"Georgia",serif;color:green;' href="~/Educational.html"> Click here to check my  qualifications</a>
+<a style='font-size:18px;font-family:"Georgia",serif;color:green;' href="Skills.html"> Click here to check my  qualifications</a>
 <br>
 
 
