--- a/Skills.html
+++ b/Skills.html
@@ -20,6 +20,6 @@
 
 
 
-<footer> <h1 style="text-align:center; background-color:gray;color: white ;" ><a style='' href="~index.html"> Home</a></h3></footer>
+<footer> <h1 style="text-align:center; background-color:gray;color: white ;" ><a style='' href="index.html"> Home</a></h3></footer>
 </body>
 </html>
