--- a/Contact.html
+++ b/Contact.html
@@ -25,6 +25,6 @@
 </table>
 <p><br></p>
 
-<footer> <h1 style="text-align:center; background-color:gray;color: white ;" ><a style='' href="~/index.html"> Home</a></h3></footer>
+<footer> <h1 style="text-align:center; background-color:gray;color: white ;" ><a style='' href="index.html"> Home</a></h3></footer>
 </body>
 </html>
