--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<h1 style="text-align:center; background-color:gray;color: white ;" >Resume</h3>
 </head>
 <body style="">
-
+<img style="align-content: center;" src='hansraj-college-squarelogo-1502794217893.png' alt='sonali'></img>
                 <p style='text-align:center;font-size:47px;font-family:"Georgia",serif;color:orange;max-height:18px'>Sonali Das</p>
                 <p style='text-align:center;font-size:20px;font-family:"Calibri",sans-serif;color:#595959;max-height: 10px'>Address &middot; Phone:123456789</p>
                 <p style='text-align:center;font-size:20px;font-family:"Calibri",sans-serif;color:#1D824C;font-weight:bold;max-height: 10px;'>Email: xyz@gmail.com;</p>
