--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body style="">
 
                 <p style='text-align:center;font-size:47px;font-family:"Georgia",serif;color:orange;max-height:18px'>Sonali Das</p>
-                <p style='text-align:center;font-size:20px;font-family:"Calibri",sans-serif;color:#595959;max-height: 10px'>Address &middot; Phone:123456789</p>
+                <p style='text-align:center;font-size:20px;font-family:"Calibri",sans-serif;color:#595959;max-height: 10px'> Phone:123456789</p>
                 <p style='text-align:center;font-size:20px;font-family:"Calibri",sans-serif;color:#1D824C;font-weight:bold;max-height: 10px;'>Email: xyz@gmail.com;</p>
            
            
